# Mansa-Musa

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/ml/architectures/: random_forest_tree_class.py
backend/src/backend/ml/data/: create_target.py  feature_scaler.py
backend/src/backend/ml/data/fetchers/: yahoo_fetcher.py
backend/src/backend/ml/data/mappers/: map_ohlcv_to_features.py
backend/tests/: create_target_test.py  map_ohlcv_test.py  random_forest_tree_class_test.py  test_feature_scaler.py  test_yahoo_fetcher.py
