[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sekanko",email = "oskar0208@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.scripts]
api = "backend.main:start_api"
dev = "backend.main:start_dev"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
