[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Sekanko", email = "oskar0208@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finance (>=0.2502,<0.2503)",
    "pandas (>=2.3.3,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "nvidia-cudnn-cu12 (>=9.18.0.77,<10.0.0.0)",
    "nvidia-cublas-cu12 (>=12.9.1.4,<13.0.0.0)",
    "yfinance (>=1.0,<2.0)",
    "ta (>=0.11.0,<0.12.0)",
]

[tool.poetry]
packages = [{ include = "backend", from = "src" }]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.poetry.scripts]
api = "backend.main:start_api"
dev = "backend.main:start_dev"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "pytest-mock (>=3.15.1,<4.0.0)"]
